package sparta.clack.message;

/**
 * An enumeration representing different types of {@link OptionMessage}.
 */
public enum OptionEnum {
    /**
     * Represents the cipher key option.
     */
    CIPHER_KEY,

    /**
     * Represents the cipher name option.
     */
    CIPHER_NAME,

    /**
     * Represents the cipher enable option.
     */
    CIPHER_ENABLE
}
